borsh-derive-internal/src/attribute_helpers/snapshots/borsh_derive_internal__attribute_helpers__field__tests__root_bounds_and_params_combined.snap
---
source: borsh-derive-internal/src/attribute_helpers/field.rs
expression: debug_print_bounds(bounds.deserialize)
---
K : Hash

