borsh-derive-internal/src/attribute_helpers/snapshots/borsh_derive_internal__attribute_helpers__field__tests__root_bounds_and_wrong_key_combined.snap
---
source: borsh-derive-internal/src/attribute_helpers/field.rs
expression: err
---
Error(
    "malformed borsh attribute, expected `borsh(bound(...), schema(...))`",
)
